# nitro_newick

./: .gitignore  Cargo.toml  README.md  build.rs
src/: config.rs  lib.rs  parser.rs  serializer.rs  tokenizer.rs  tree.rs
tests/resources/: empty_quotes.nw  empty_quotes.out  escape.nw  escape.out  labels.nw  labels.out  nested.nw  nested.out  quotes.nw  quotes.out  simple.nw  simple.out
tests/resources/parser/accept/: nameless_leaves_with_length.nw  numeric_prefix_label_leaf.nw  simple.nw  support_and_branches.nw
tests/resources/parser/postorder/: trailing_comma_unifurcation.nw  trailing_comma_unifurcation.out
tests/resources/parser/reject/: cutoff.nw  missing_semicolon.nw  trailing_comma.nw
tests/resources/serializer/: labels.nw  labels_and_branches.nw  unifurcation.nw
tests/resources/tokenizer/accept/: dot_float.nw  dot_float.out  float.nw  float.out  negative.nw  negative.out  numeric_label.nw  numeric_label.out  numeric_prefix_label_unquoted.out  rich.nw  rich.out  spaced_float.nw  spaced_float.out
tests/resources/tokenizer/reject/: forbidden_newline.nw  unterminated_label.nw
